--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Glint</title>
+    <title>Bhavik Narang</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -31,8 +31,8 @@
 
     <!-- favicons
     ================================================== -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/bhavik_images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/bhavik_images/favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -83,10 +83,13 @@
 
         </nav>  <!-- end header-nav -->
 
-        <a class="header-menu-toggle" href="#0">
-            <span class="header-menu-text">Menu</span>
-            <span class="header-menu-icon"></span>
-        </a>
+        <div class="header-menu">
+            <a class="header-menu-toggle" href="#0">
+                <span class="header-menu-text">Menu</span>
+                <span class="header-menu-icon"></span>
+            </a>
+        </div>
+
 
     </header> <!-- end s-header -->
 
@@ -105,8 +108,8 @@
                 <h3>Bhavik Narang</h3>
 
                 <h1>
-                    "A creative individual who takes a user centric approach to problem solve
-                    and is dedicated to provide the very best for his clients"
+                    A creative individual who takes a user-centric approach when solving problems
+                    and is dedicated to provide the very best for his clients
                 </h1>
 
                 <div class="home-content__buttons">
@@ -124,7 +127,7 @@
             </div>
 
             <div class="home-content__scroll">
-                <a href="#about" class="scroll-link smoothscroll">
+                <a href="#contact" class="scroll-link smoothscroll">
                     <span>Scroll Down</span>
                 </a>
             </div>
@@ -142,10 +145,10 @@
                 <a href="https://www.instagram.com/photosbythebois/"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/bhaviknarang/"><i class="fa fa-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
+                <a href="https://www.linkedin.com/in/bhaviknarang/"><i class="fa fa-linkedin" aria-hidden="true"></i><span>LinkedIn</span></a>
             </li>
             <li>
-                <a href="https://github.com/bhavik99"><i class="fa fa-github" aria-hidden="true"></i><span>Github</span></a>
+                <a href="https://github.com/bhavik99"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
             </li>
         </ul> 
         <!-- end home-social -->
@@ -251,7 +254,7 @@
                             <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/photosbythebois/"><i class="fa fa-instagram aria-hidden="true"></i></a>
+                            <a href="https://www.instagram.com/photosbythebois/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://www.linkedin.com/in/bhaviknarang/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
@@ -276,9 +279,9 @@
         <div class="row footer-main">
 
             <div class="col-six tab-full left footer-desc">
-                <p>Thanks for reading about my journey. I would love if you got in contact with me and told me about your journey too;
+                <p>Thank you for reading about my journey. I would love if you got in contact with me and told me about your journey too;
                     I love hearing about how other people have achieved the things they did. Once again, thanks a ton for reading
-                    and please do share this site with someone who may find it to be an interesting read. <br></p>
+                    and please do share this site with someone who may find it interesting. <br></p>
                 <div class="footer-logo"></div>
 
             </div>
