About me page added in stats change to

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <nav class="header-nav">
 
-            <a href="#0" class="header-nav__close" title="close"><span>Close</span></a>
+            <a href="#0" class="header-nav__close" title="close"><span></span></a>
 
             <div class="header-nav__content">
                 <h3>Navigation</h3>
@@ -155,6 +155,56 @@
 
     </section> <!-- end s-home -->
 
+    <!-- about
+        ================================================== -->
+    <section id='about' class="s-about">
+
+        <div class="row section-header has-bottom-sep" data-aos="fade-up">
+            <div class="col-full">
+                <h3 class="subhead subhead--dark">Hello Scroller</h3>
+                <h1 class="display-1 display-1--light">"Who am I?" you may ask</h1>
+            </div>
+        </div> <!-- end section-header -->
+        <div class="row about-desc" data-aos="fade-up">
+            <div class="col-full">
+                <figure><img src="images/bhavik_images/portrait.png" alt="Portrait of Bhavik Narang"></figure>
+                <p>
+                    An ambitious third-year computer science student who likes to work in teams and very easily integrates within them.
+                    But what really sets me apart? It's my ability to couple my technical knowledge with my communication skills
+                    to convey ideas in an agile manner by adapting to a wide range of audiences. With a strong interest in technology
+                    and the diverse applications it has I hope to continue my journey on learning about the business world and
+                    continue to add value to businesses along the way.
+                </p>
+            </div>
+        </div> <!-- end about-desc -->
+
+        <div class="row about-stats stats block-1-4 block-m-1-2 block-mob-full" data-aos="fade-up">
+
+            <div class="col-block stats__col ">
+                <div class="stats__count">1<sup>st</sup></div>
+                <h5>Degree Average</h5>
+            </div>
+            <div class="col-block stats__col">
+                <div class="stats__count">5</div>
+                <h5>Internships</h5>
+            </div>
+            <div class="col-block stats__col">
+                <div class="stats__count">X</div>
+                <h5>SOMETHING HERE</h5>
+            </div>
+            <div class="col-block stats__col ">
+                <div class="stats__count">
+                    <code>INT_MAX</code>
+                </div>
+                <h5>Cups of coffee</h5>
+            </div>
+
+        </div> <!-- end about-stats -->
+
+        <div class="about__line"></div>
+
+    </section> <!-- end s-about -->
+
 
     <!-- contact
     ================================================== -->
@@ -181,7 +231,7 @@
 
                 <form name="contactForm" id="contactForm" method="post" action="" novalidate="novalidate">
                     <fieldset>
-    
+
                     <div class="form-field">
                         <input name="contactName" type="text" id="contactName" placeholder="Your Name*" value="" minlength="2" required="" aria-required="true" class="full-width">
                     </div>
