Nav bar colours, para edit

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                     <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
                 </ul>
     
-                <p>Perspiciatis hic praesentium nesciunt. Et neque a dolorum <a href='#0'>voluptatem</a> porro iusto sequi veritatis libero enim. Iusto id suscipit veritatis neque reprehenderit.</p>
+                <p>Hope you're enjoying your time here.
+                    I'd love to hear about any improvements I could make to the site; drop me a message!</p>
     
                 <ul class="header-nav__social">
                     <li>
@@ -127,7 +128,7 @@
             </div>
 
             <div class="home-content__scroll">
-                <a href="#contact" class="scroll-link smoothscroll">
+                <a href="#about" class="scroll-link smoothscroll">
                     <span>Scroll Down</span>
                 </a>
             </div>
