--- a/styles.html
+++ b/styles.html
@@ -66,7 +66,7 @@
                 <ul class="header-nav__list">
                     <li class="current"><a class="smoothscroll"  href="index.html" title="home">Home</a></li>
                     <li><a href="index.html#about" title="about">About</a></li>
-                    <li><a href="index.html#services" title="services">Services</a></li>
+                    <li><a href="index.html#education" title="services">Services</a></li>
                     <li><a href="index.html#works" title="works">Works</a></li>
                     <li><a href="index.html#clients" title="clients">Clients</a></li>
                     <li><a href="#contact" title="contact">Contact</a></li>
@@ -141,7 +141,7 @@
                 </a>
             </div>
 
-            <div class="home-content__line"></div>
+            <div class="home-about__line"></div>
 
         </div> <!-- end home-content -->
 
