--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
             <h5>Internships</h5>
         </div>
         <div class="col-block stats__col">
-            <div class="stats__count">X</div>
-            <h5>SOMETHING HERE</h5>
+            <div class="stats__count">?</div>
+            <h5>Favourite Colour</h5>
         </div>
         <div class="col-block stats__col ">
             <div class="stats__count">
