Experience page with top companies track added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <!-- header
 ================================================== -->
-<header class="s-header no-blue-select-highlight">
+<header class="s-header">
 
     <div class="header-logo">
         <a class="site-logo" href="index.html">
@@ -100,7 +100,7 @@
 
 <!-- home
 ================================================== -->
-<section id="home" class="s-home target-section no-blue-select-highlight" data-parallax="scroll"
+<section id="home" class="s-home target-section" data-parallax="scroll"
          data-image-src="images/bhavik_images/hero-bg.png" data-natural-width=3000 data-natural-height=2000
          data-position-y=center>
 
@@ -162,12 +162,12 @@
 
 <!-- about
     ================================================== -->
-<section id='about' class="s-about no-blue-select-highlight">
+<section id='about' class="s-about">
     <div class="home-about__line"></div>
     <div class="row section-header has-bottom-sep" data-aos="fade-up">
         <div class="col-full">
             <h3 class="subhead subhead--dark">About me</h3>
-            <h1 class="display-1 display-1--light">Who am I</h1>
+            <h1 class="display-1 display-1--light">Who am I?</h1>
         </div>
     </div> <!-- end section-header -->
     <div class="row about-desc" data-aos="fade-up">
@@ -217,7 +217,7 @@
 
 <!-- education
     ================================================== -->
-<section id="education" class="s-education no-blue-select-highlight">
+<section id="education" class="s-education">
 
     <div class="row section-header has-bottom-sep" data-aos="fade-up">
         <div class="col-full">
@@ -329,7 +329,7 @@
                     <dd class="achievements-body">
                         <ul>
                             <li>Head Boy</li>
-                            <li><a href="https://www.imperial.ac.uk/news/176616/school-students-reach-stars-imperial/">Imperial Interstellar Challenge Winner</a></li>
+                            <li><a href="https://www.imperial.ac.uk/news/176616/school-students-reach-stars-imperial/">Imperial Interstellar Challenge</a> Winner</li>
                             <li>Top Fundraiser for <a href="https://twitter.com/rtenews/status/769603095261163520?s=20">Southall Shamrocks</a></li>
                             <li>Silver in <a href="https://www.ukmt.org.uk/competitions/solo/senior-mathematical-challenge-paper">UKMT Senior MC</a></li>
                         </ul>
@@ -342,12 +342,88 @@
 
     <div class="education-top__line"></div>
 
-</section> <!-- end s-services -->
+</section> <!-- end s-education -->
+
+
+<!-- clients
+    ================================================== -->
+<section id="clients" class="s-clients">
+
+    <div class="row section-header" data-aos="fade-up">
+        <div class="col-full">
+            <h3 class="subhead">Experience</h3>
+            <h1 class="display-2">Where have I worked?</h1>
+        </div>
+    </div> <!-- end section-header -->
+
+    <div class="row clients-outer" data-aos="fade-up">
+        <div class="col-full">
+            <div class="clients">
+
+                <a href="#0" title="" class="clients__slide"><img src="images/bhavik_images/companies/bankofengland.png" /></a>
+                <a href="#0" title="" class="clients__slide"><img src="images/bhavik_images/companies/ibm.png" /></a>
+                <a href="#0" title="" class="clients__slide"><img src="images/bhavik_images/companies/amplifytrading.png" /></a>
+                <a href="#0" title="" class="clients__slide"><img src="images/bhavik_images/companies/deloitte.png" /></a>
+
+            </div> <!-- end clients -->
+        </div> <!-- end col-full -->
+    </div> <!-- end clients-outer -->
+
+    <div class="row clients-testimonials" data-aos="fade-up">
+        <div class="col-full">
+            <div class="testimonials">
+
+                <div class="testimonials__slide">
+
+                    <p>Qui ipsam temporibus quisquam vel. Maiores eos cumque distinctio nam accusantium ipsum.
+                        Laudantium quia consequatur molestias delectus culpa facere hic dolores aperiam. Accusantium quos qui praesentium corpori.
+                        Excepturi nam cupiditate culpa doloremque deleniti repellat.</p>
+
+                    <img src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
+                    <div class="testimonials__info">
+                        <span class="testimonials__name">Tim Cook</span>
+                        <span class="testimonials__pos">CEO, Apple</span>
+                    </div>
+
+                </div>
+
+                <div class="testimonials__slide">
+
+                    <p>Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi adipisci.
+                        Nisi eaque consequatur. Quasi voluptas eius distinctio. Atque eos maxime. Qui ipsam temporibus quisquam vel.</p>
+
+                    <img src="images/avatars/user-05.jpg" alt="Author image" class="testimonials__avatar">
+                    <div class="testimonials__info">
+                        <span class="testimonials__name">Sundar Pichai</span>
+                        <span class="testimonials__pos">CEO, Google</span>
+                    </div>
+
+                </div>
+
+                <div class="testimonials__slide">
+
+                    <p>Repellat dignissimos libero. Qui sed at corrupti expedita voluptas odit. Nihil ea quia nesciunt. Ducimus aut sed ipsam.
+                        Autem eaque officia cum exercitationem sunt voluptatum accusamus. Quasi voluptas eius distinctio.</p>
+
+                    <img src="images/avatars/user-02.jpg" alt="Author image" class="testimonials__avatar">
+                    <div class="testimonials__info">
+                        <span class="testimonials__name">Satya Nadella</span>
+                        <span class="testimonials__pos">CEO, Microsoft</span>
+                    </div>
+
+                </div>
+
+            </div><!-- end testimonials -->
+
+        </div> <!-- end col-full -->
+    </div> <!-- end client-testimonials -->
+
+</section> <!-- end s-clients -->
 
 
 <!-- contact
 ================================================== -->
-<section id="contact" class="s-contact no-blue-select-highlight">
+<section id="contact" class="s-contact">
 
     <div class="overlay"></div>
     <div class="contact__line"></div>
@@ -471,7 +547,7 @@
 ================================================== -->
 <footer>
 
-    <div class="row footer-main no-blue-select-highlight">
+    <div class="row footer-main">
 
         <div class="col-six tab-full left footer-desc">
             <p>Thank you for reading about my journey. I would love if you got in contact with me and told me about your
@@ -498,7 +574,7 @@
 
     </div> <!-- end footer-main -->
 
-    <div class="row footer-bottom no-blue-select-highlight">
+    <div class="row footer-bottom">
 
         <div class="col-twelve">
             <div class="copyright">
