Added experience section timeline Design colour to be finished and content but template ready to use

--- a/index.html
+++ b/index.html
@@ -370,6 +370,34 @@
         </div> <!-- end col-full -->
     </div> <!-- end clients-outer -->
 
+    <section class="row timeline">
+        <div class="container" data-aos="fade-up">
+            <div class="timeline-item" data-aos="fade-left">
+                <div class="timeline-img"></div>
+
+                <div class="timeline-content js--fadeInLeft">
+                    <h2>Title</h2>
+                    <div class="date">1 MAY 2016</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ipsa ratione omnis alias cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi amet in dolores. Alias, ullam.</p>
+                </div>
+            </div>
+
+            <div class="timeline-item" data-aos="fade-right" >
+
+                <div class="timeline-img"></div>
+
+                <div class="timeline-content timeline-card js--fadeInRight">
+                    <div class="timeline-img-header">
+                        <h2>Card Title</h2>
+                    </div>
+                    <div class="date">25 MAY 2016</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ipsa ratione omnis alias cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi amet in dolores. Alias, ullam.</p>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
 
 
 </section> <!-- end s-clients -->
