center timeline line animation fix

--- a/index.html
+++ b/index.html
@@ -370,9 +370,10 @@
         </div> <!-- end col-full -->
     </div> <!-- end clients-outer -->
 
-    <section class="row timeline">
-        <div class="container" data-aos="fade-up">
-            <div class="timeline-item" data-aos="fade-left">
+    <section class="row timeline" data-aos="fade-up">
+        <div class="timeline-middle-line"></div>
+        <div class="container">
+            <div class="timeline-item" data-aos="fade-right">
                 <div class="timeline-img"></div>
 
                 <div class="timeline-content js--fadeInLeft">
@@ -382,7 +383,7 @@
                 </div>
             </div>
 
-            <div class="timeline-item" data-aos="fade-right" >
+            <div class="timeline-item" data-aos="fade-left" >
 
                 <div class="timeline-img"></div>
 
