--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
         <div class="col-full">
             <div class="clients">
 
+                <a href="#0" title="" class="clients__slide"><img src="images/bhavik_images/companies/sky.png" /></a>
                 <a href="#0" title="" class="clients__slide"><img src="images/bhavik_images/companies/bankofengland.png" /></a>
                 <a href="#0" title="" class="clients__slide"><img src="images/bhavik_images/companies/ibm.png" /></a>
                 <a href="#0" title="" class="clients__slide"><img src="images/bhavik_images/companies/amplifytrading.png" /></a>
@@ -369,54 +370,7 @@
         </div> <!-- end col-full -->
     </div> <!-- end clients-outer -->
 
-    <div class="row clients-testimonials" data-aos="fade-up">
-        <div class="col-full">
-            <div class="testimonials">
 
-                <div class="testimonials__slide">
-
-                    <p>Qui ipsam temporibus quisquam vel. Maiores eos cumque distinctio nam accusantium ipsum.
-                        Laudantium quia consequatur molestias delectus culpa facere hic dolores aperiam. Accusantium quos qui praesentium corpori.
-                        Excepturi nam cupiditate culpa doloremque deleniti repellat.</p>
-
-                    <img src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
-                    <div class="testimonials__info">
-                        <span class="testimonials__name">Tim Cook</span>
-                        <span class="testimonials__pos">CEO, Apple</span>
-                    </div>
-
-                </div>
-
-                <div class="testimonials__slide">
-
-                    <p>Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi adipisci.
-                        Nisi eaque consequatur. Quasi voluptas eius distinctio. Atque eos maxime. Qui ipsam temporibus quisquam vel.</p>
-
-                    <img src="images/avatars/user-05.jpg" alt="Author image" class="testimonials__avatar">
-                    <div class="testimonials__info">
-                        <span class="testimonials__name">Sundar Pichai</span>
-                        <span class="testimonials__pos">CEO, Google</span>
-                    </div>
-
-                </div>
-
-                <div class="testimonials__slide">
-
-                    <p>Repellat dignissimos libero. Qui sed at corrupti expedita voluptas odit. Nihil ea quia nesciunt. Ducimus aut sed ipsam.
-                        Autem eaque officia cum exercitationem sunt voluptatum accusamus. Quasi voluptas eius distinctio.</p>
-
-                    <img src="images/avatars/user-02.jpg" alt="Author image" class="testimonials__avatar">
-                    <div class="testimonials__info">
-                        <span class="testimonials__name">Satya Nadella</span>
-                        <span class="testimonials__pos">CEO, Microsoft</span>
-                    </div>
-
-                </div>
-
-            </div><!-- end testimonials -->
-
-        </div> <!-- end col-full -->
-    </div> <!-- end client-testimonials -->
 
 </section> <!-- end s-clients -->
 
