--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
     <!-- favicons
     ================================================== -->
-    <link rel="shortcut icon" href="images/bhavik_images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="images/bhavik_images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/bhavik_images/favicon/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/bhavik_images/favicon/favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -46,7 +46,7 @@
 
     <div class="header-logo">
         <a class="site-logo" href="index.html">
-            <img src="images/bhavik_images/logo.png" alt="Homepage">
+            <img src="images/bhavik_images/header-section/logo.png" alt="Homepage">
         </a>
     </div>
 
@@ -101,7 +101,7 @@
 <!-- home
 ================================================== -->
 <section id="home" class="s-home target-section" data-parallax="scroll"
-         data-image-src="images/bhavik_images/hero-bg.png" data-natural-width=3000 data-natural-height=2000
+         data-image-src="images/bhavik_images/header-section/hero-bg.png" data-natural-width=3000 data-natural-height=2000
          data-position-y=center>
 
     <div class="overlay"></div>
@@ -172,7 +172,7 @@
     </div> <!-- end section-header -->
     <div class="row about-desc" data-aos="fade-up">
         <div class="col-full">
-            <figure><img src="images/bhavik_images/portrait.png" alt="Portrait of Bhavik Narang"></figure>
+            <figure><img src="images/bhavik_images/education-section/portrait.png" alt="Portrait of Bhavik Narang"></figure>
             <p>
                 An ambitious third-year computer science student who likes to work in teams and very easily integrates
                 within them.
@@ -360,11 +360,11 @@
         <div class="col-full">
             <div class="clients">
 
-                <a href="#0" title="" class="clients__slide"><img src="images/bhavik_images/companies/sky.png" /></a>
-                <a href="#0" title="" class="clients__slide"><img src="images/bhavik_images/companies/bankofengland.png" /></a>
-                <a href="#0" title="" class="clients__slide"><img src="images/bhavik_images/companies/ibm.png" /></a>
-                <a href="#0" title="" class="clients__slide"><img src="images/bhavik_images/companies/amplifytrading.png" /></a>
-                <a href="#0" title="" class="clients__slide"><img src="images/bhavik_images/companies/deloitte.png" /></a>
+                <a href="#experience-sky" title="" class="clients__slide smoothscroll"><img src="images/bhavik_images/experience-section/logos/sky.png" /></a>
+                <a href="#experience-boe" title="" class="clients__slide smoothscroll"><img src="images/bhavik_images/experience-section/logos/bankofengland.png" /></a>
+                <a href="#experience-ibm" title="" class="clients__slide smoothscroll"><img src="images/bhavik_images/experience-section/logos/ibm.png" /></a>
+                <a href="#experience-amplify" title="" class="clients__slide smoothscroll"><img src="images/bhavik_images/experience-section/logos/amplifytrading.png" /></a>
+                <a href="#experience-deloitte" title="" class="clients__slide smoothscroll"><img src="images/bhavik_images/experience-section/logos/deloitte.png" /></a>
 
             </div> <!-- end clients -->
         </div> <!-- end col-full -->
@@ -373,28 +373,93 @@
     <section class="row timeline" data-aos="fade-up">
         <div class="timeline-middle-line"></div>
         <div class="container">
-            <div class="timeline-item" data-aos="fade-right">
-                <div class="timeline-img"></div>
 
-                <div class="timeline-content js--fadeInLeft">
-                    <h2>Title</h2>
-                    <div class="date">1 MAY 2016</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ipsa ratione omnis alias cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi amet in dolores. Alias, ullam.</p>
+            <div class="timeline-item row" id="experience-sky">
+                <div class="timeline-icon" style="--experience-icon: url('../images/bhavik_images/experience-section/icons/icons8-retro-tv-48.png')"></div>
+
+                <div class="timeline-content" data-aos="fade-right" style="--experience-background-image: url('../images/bhavik_images/experience-section/backgrounds/sky.jpg')">
+                    <div class="inner">
+                    <h2>Sky</h2>
+                    <h3>Web Application Developer</h3>
+                    <div class="date">Dec 2017</div>
+                    <ul>
+                        <li>Assisted the team to create an internal website by working on a small part of the website in HTML and CSS</li>
+                        <li>Worked with the team to help them understand how <a href="https://microbit.org/">MicroBits</a> can be programmed and how they can be used to introduce children to coding</li>
+                        <li>Shadowed staff to understand how the software development life cycle works, particularly the testing process as well as the use of TDD</li>
+                    </ul>
+                </div>
                 </div>
             </div>
 
-            <div class="timeline-item" data-aos="fade-left" >
+            <div class="timeline-item row" id="experience-boe">
+                <div class="timeline-icon" style="--experience-icon: url('../images/bhavik_images/experience-section/icons/icons8-spy-48.png')"></div>
 
-                <div class="timeline-img"></div>
-
-                <div class="timeline-content timeline-card js--fadeInRight">
-                    <div class="timeline-img-header">
-                        <h2>Card Title</h2>
+                <div class="timeline-content" data-aos="fade-left" style="--experience-background-image: url('../images/bhavik_images/experience-section/backgrounds/boe.jpg')">
+                    <div class="inner">
+                        <h2>Bank of England</h2>
+                        <h3>Cyber Threat Investigator</h3>
+                        <div class="date">Jun 2019 - Aug 2019</div>
+                        <ul>
+                            <li>Analysed data with the use of custom dashboards designed on Splunk by me for internal investigations to find patterns and communicate them in a coherent manner for seniors to understand</li>
+                            <li>Made risk-based assessments for possible data losses and acted accordingly to manage incidents</li>
+                            <li>Interviewed subjects to assess if they, in turn, the Bank’s network could be compromised due to their actions</li>
+                        </ul>
                     </div>
-                    <div class="date">25 MAY 2016</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ipsa ratione omnis alias cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi amet in dolores. Alias, ullam.</p>
                 </div>
+            </div>
 
+            <div class="timeline-item row" id="experience-ibm">
+                <div class="timeline-icon" style="--experience-icon: url('../images/bhavik_images/experience-section/icons/icons8-safety-care-48.png')"></div>
+
+                <div class="timeline-content" data-aos="fade-right" style="--experience-background-image: url('../images/bhavik_images/experience-section/backgrounds/ibm.jpg')">
+                    <div class="inner">
+                        <h2>IBM</h2>
+                        <h3>Secure Project Consultant</h3>
+                        <div class="date">Jun 2020 - Aug 2020</div>
+                        <ul>
+                            <li>Worked in small teams using the Agile Methodology and Design Thinking, taking many roles, rotating through projects, including Scrum Master, Business Analyst, UX Designer and Developer.</li>
+                            <li>Implemented a website using HTML and JavaScript involving NLP (through Watson) to streamline a process.</li>
+                            <li>Wrote complex SQL queries and applied them to create data visualisations to support the marketing strategy.</li>
+                            <li>Efficiently adapted communication methods to suit different stakeholders and maximised output to create user-centric products.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="timeline-item row" id="experience-amplify">
+                <div class="timeline-icon" style="--experience-icon: url('../images/bhavik_images/experience-section/icons/icons8-code-48.png')"></div>
+
+                <div class="timeline-content" data-aos="fade-left" style="--experience-background-image: url('../images/bhavik_images/experience-section/backgrounds/amplify.jpg')">
+                    <div class="inner">
+                        <h2>Amplify Trading</h2>
+                        <h3>Technology Analyst</h3>
+                        <div class="date">Sept 2020 - Feb 2021</div>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                        </div>
+                </div>
+            </div>
+
+            <div class="timeline-item row" id="experience-deloitte">
+                <div class="timeline-icon" style="--experience-icon: url('../images/bhavik_images/experience-section/icons/icons8-innovation-48.png')"></div>
+
+                <div class="timeline-content" data-aos="fade-right" style="--experience-background-image: url('../images/bhavik_images/experience-section/backgrounds/deloitte.jpg')">
+                    <div class="inner">
+                        <h2>Deloitte</h2>
+                        <h3>Digital Consultant</h3>
+                        <div class="date">Feb 20216 - Sept 2021</div>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
 
         </div>
