Bug fix where animation for experience disappeared on actual phone

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
             <ul class="header-nav__list">
                 <li class="current"><a class="smoothscroll" href="#home" title="home">Home</a></li>
                 <li><a class="smoothscroll" href="#about" title="about">About</a></li>
-                <li><a class="smoothscroll" href="#education" title="services">Services</a></li>
+                <li><a class="smoothscroll" href="#education" title="services">Education</a></li>
+                <li><a class="smoothscroll" href="#clients" title="clients">Experience</a></li>
                 <li><a class="smoothscroll" href="#contact" title="contact">Contact</a></li>
             </ul>
 
@@ -381,7 +382,7 @@
                     <div class="inner">
                     <h2>Sky</h2>
                     <h3>Web Application Developer</h3>
-                    <div class="date">Dec 2017</div>
+                    <div class="date">Dec 2017 -<br class="br-for-small-screen">Dec 2017</div>
                     <ul>
                         <li>Assisted the team to create an internal website by working on a small part of the website in HTML and CSS</li>
                         <li>Worked with the team to help them understand how <a href="https://microbit.org/">MicroBits</a> can be programmed and how they can be used to introduce children to coding</li>
@@ -398,7 +399,7 @@
                     <div class="inner">
                         <h2>Bank of England</h2>
                         <h3>Cyber Threat Investigator</h3>
-                        <div class="date">Jun 2019 - Aug 2019</div>
+                        <div class="date">Jun 2019 -<br class="br-for-small-screen">Aug 2019</div>
                         <ul>
                             <li>Analysed data with the use of custom dashboards designed on Splunk by me for internal investigations to find patterns and communicate them in a coherent manner for seniors to understand</li>
                             <li>Made risk-based assessments for possible data losses and acted accordingly to manage incidents</li>
@@ -415,7 +416,7 @@
                     <div class="inner">
                         <h2>IBM</h2>
                         <h3>Secure Project Consultant</h3>
-                        <div class="date">Jun 2020 - Aug 2020</div>
+                        <div class="date">Jun 2020 -<br class="br-for-small-screen">Aug 2020</div>
                         <ul>
                             <li>Worked in small teams using the Agile Methodology and Design Thinking, taking many roles, rotating through projects, including Scrum Master, Business Analyst, UX Designer and Developer.</li>
                             <li>Implemented a website using HTML and JavaScript involving NLP (through Watson) to streamline a process.</li>
@@ -433,7 +434,7 @@
                     <div class="inner">
                         <h2>Amplify Trading</h2>
                         <h3>Technology Analyst</h3>
-                        <div class="date">Sept 2020 - Feb 2021</div>
+                        <div class="date">Sept 2020 -<br class="br-for-small-screen">Feb 2021</div>
                         <ul>
                             <li></li>
                             <li></li>
@@ -451,7 +452,7 @@
                     <div class="inner">
                         <h2>Deloitte</h2>
                         <h3>Digital Consultant</h3>
-                        <div class="date">Feb 20216 - Sept 2021</div>
+                        <div class="date">Feb 20216 -<br class="br-for-small-screen">Sept 2021</div>
                         <ul>
                             <li></li>
                             <li></li>
