Fixed and temp footer para put in

--- a/index.html
+++ b/index.html
@@ -594,11 +594,13 @@
     <div class="row footer-main">
 
         <div class="col-six tab-full left footer-desc">
-            <p>Thank you for reading about my journey. I would love if you got in contact with me and told me about your
+            <!--<p>Thank you for reading about my journey. I would love if you got in contact with me and told me about your
                 journey too;
                 I love hearing about how other people have achieved the things they did. Once again, thanks a ton for
                 reading
-                and please do share this site with someone who may find it interesting. <br></p>
+                and please do share this site with someone who may find it interesting.<br></p>
+            -->
+            <p>You're welcome Arshdip</p>
             <div class="footer-logo"></div>
 
         </div>
