Animations edits on education section

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </div> <!-- end section-header -->
     <div class="row about-desc" data-aos="fade-up">
         <div class="col-full">
-            <figure><img src="images/bhavik_images/education-section/portrait.png" alt="Portrait of Bhavik Narang"></figure>
+            <figure data-aos="zoom-in"><img src="images/bhavik_images/education-section/portrait.png" alt="Portrait of Bhavik Narang"></figure>
             <p>
                 An ambitious third-year computer science student who likes to work in teams and very easily integrates
                 within them.
