--- a/index.html
+++ b/index.html
@@ -505,7 +505,8 @@
                     </div>
                     <div class="form-field">
                         <textarea name="contactMessage" id="contactMessage" placeholder="Your Message*" rows="10"
-                                  cols="50" required="" aria-required="true" class="full-width"></textarea>
+                                  cols="50" required="" minlength="15" aria-required="true"
+                                  class="full-width"></textarea>
                     </div>
                     <div class="form-field">
                         <button class="full-width btn--primary" value="click">Submit</button>
@@ -623,11 +624,6 @@
     <div class="row footer-bottom">
 
         <div class="col-twelve">
-            <div class="copyright">
-                <span>© Copyright Glint 2017</span>
-                <span>Site Template by <a href="https://www.colorlib.com/">Colorlib</a></span>
-            </div>
-
             <div class="go-top">
                 <a class="smoothscroll" title="Back to Top" href="#top"><i class="icon-arrow-up" aria-hidden="true"></i></a>
             </div>
