--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
     <link rel="shortcut icon" href="images/bhavik_images/favicon/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/bhavik_images/favicon/favicon.ico" type="image/x-icon">
 
+    <!-- Google Analytics
+    ================================================== -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RQ20D3F0XH"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+        gtag('config', 'G-RQ20D3F0XH');
+    </script>
+
 </head>
 
 <body id="top">
