--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- Google Analytics
     ================================================== -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RQ20D3F0XH"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MFB0B4FNNE"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -42,7 +42,8 @@
         }
 
         gtag('js', new Date());
-        gtag('config', 'G-RQ20D3F0XH');
+
+        gtag('config', 'G-MFB0B4FNNE');
     </script>
 
 </head>
