Progress bar on top added

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
 ================================================== -->
 <header class="s-header">
 
+    <div class="progress-container">
+        <div class="progress-bar" id="myBar"></div>
+    </div>
+
     <div class="header-logo">
         <a class="site-logo" href="index.html">
             <img src="images/bhavik_images/header-section/logo.png" alt="Homepage">
@@ -204,7 +208,9 @@
             <h5>Degree Average</h5>
         </div>
         <div class="col-block stats__col">
-            <div class="stats__count">5</div>
+            <div class="stats__count">
+                <div class="num">5</div>
+            </div>
             <h5>Internships</h5>
         </div>
         <div class="col-block stats__col">
