--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 
             <!-- contact-success -->
             <div class="message-success">
-                Your message was sent, thank you!<br>
+                Your message was sent. Thank you!<br>
             </div>
 
         </div> <!-- end contact-primary -->
@@ -615,13 +615,12 @@
     <div class="row footer-main">
 
         <div class="col-six tab-full left footer-desc">
-            <!--<p>Thank you for reading about my journey. I would love if you got in contact with me and told me about your
-                journey too;
-                I love hearing about how other people have achieved the things they did. Once again, thanks a ton for
-                reading
-                and please do share this site with someone who may find it interesting.<br></p>
-            -->
-            <p>You're welcome Arshdip</p>
+            <p>Thank you for reading about my journey.
+                I would love if you got in contact with me and told me about your journey too;
+                I love hearing about how other people have achieved the things they did.
+                Once again, thanks a ton for reading
+                and please do share this site with someone who may find it interesting.<br>
+            </p>
             <div class="footer-logo"></div>
 
         </div>
@@ -640,16 +639,6 @@
         </div>
 
     </div> <!-- end footer-main -->
-
-    <div class="row footer-bottom">
-
-        <div class="col-twelve">
-            <div class="go-top">
-                <a class="smoothscroll" title="Back to Top" href="#top"><i class="icon-arrow-up" aria-hidden="true"></i></a>
-            </div>
-        </div>
-
-    </div> <!-- end footer-bottom -->
 
 </footer> <!-- end footer -->
 
