Message edit ton > lot

--- a/index.html
+++ b/index.html
@@ -529,6 +529,9 @@
                                   rows="10"></textarea>
                     </div>
                     <div class="form-field">
+                        <div class="g-recaptcha" data-sitekey="6Le30DMaAAAAAKJYEQTlN2MZqY-d_HlaG1Wq8TSN"></div>
+                    </div>
+                    <div class="form-field">
                         <button class="full-width btn--primary" value="click">Submit</button>
                         <div class="submit-loader">
                             <div class="text-loader">Sending...</div>
@@ -618,7 +621,7 @@
             <p>Thank you for reading about my journey.
                 I would love if you got in contact with me and told me about your journey too;
                 I love hearing about how other people have achieved the things they did.
-                Once again, thanks a ton for reading
+                Once again, thanks a lot for reading
                 and please do share this site with someone who may find it interesting.<br>
             </p>
             <div class="footer-logo"></div>
