clients becomes companies

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <li class="current"><a class="smoothscroll" href="#home" title="home">Home</a></li>
                 <li><a class="smoothscroll" href="#about" title="about">About</a></li>
                 <li><a class="smoothscroll" href="#education" title="services">Education</a></li>
-                <li><a class="smoothscroll" href="#clients" title="clients">Experience</a></li>
+                <li><a class="smoothscroll" href="#companies" title="companies">Experience</a></li>
                 <li><a class="smoothscroll" href="#contact" title="contact">Contact</a></li>
             </ul>
 
@@ -129,7 +129,7 @@
 
             <h1>
                 A creative individual who takes a user-centric approach when solving problems
-                and is dedicated to provide the very best for his clients
+                and is dedicated to provide the very best for his companies
             </h1>
 
             <div class="home-content__buttons">
@@ -361,9 +361,9 @@
 </section> <!-- end s-education -->
 
 
-<!-- clients
+<!-- companies
     ================================================== -->
-<section id="clients" class="s-clients">
+<section id="companies" class="s-companies">
 
     <div class="row section-header" data-aos="fade-up">
         <div class="col-full">
@@ -372,28 +372,35 @@
         </div>
     </div> <!-- end section-header -->
 
-    <div class="row clients-outer" data-aos="fade-up">
+    <div class="row companies-outer" data-aos="fade-up">
         <div class="col-full">
-            <div class="clients">
+            <div class="companies">
 
-                <a href="#experience-sky" title="" class="clients__slide smoothscroll"><img src="images/bhavik_images/experience-section/logos/sky.png" /></a>
-                <a href="#experience-boe" title="" class="clients__slide smoothscroll"><img src="images/bhavik_images/experience-section/logos/bankofengland.png" /></a>
-                <a href="#experience-ibm" title="" class="clients__slide smoothscroll"><img src="images/bhavik_images/experience-section/logos/ibm.png" /></a>
-                <a href="#experience-amplify" title="" class="clients__slide smoothscroll"><img src="images/bhavik_images/experience-section/logos/amplifytrading.png" /></a>
-                <a href="#experience-deloitte" title="" class="clients__slide smoothscroll"><img src="images/bhavik_images/experience-section/logos/deloitte.png" /></a>
+                <a href="#experience-sky" title="" class="companies__slide smoothscroll"><img
+                        src="images/bhavik_images/experience-section/logos/sky.png"/></a>
+                <a href="#experience-boe" title="" class="companies__slide smoothscroll"><img
+                        src="images/bhavik_images/experience-section/logos/bankofengland.png"/></a>
+                <a href="#experience-ibm" title="" class="companies__slide smoothscroll"><img
+                        src="images/bhavik_images/experience-section/logos/ibm.png"/></a>
+                <a href="#experience-amplify" title="" class="companies__slide smoothscroll"><img
+                        src="images/bhavik_images/experience-section/logos/amplifytrading.png"/></a>
+                <a href="#experience-deloitte" title="" class="companies__slide smoothscroll"><img
+                        src="images/bhavik_images/experience-section/logos/deloitte.png"/></a>
 
-            </div> <!-- end clients -->
+            </div> <!-- end companies -->
         </div> <!-- end col-full -->
-    </div> <!-- end clients-outer -->
+    </div> <!-- end companies-outer -->
 
     <section class="row timeline" data-aos="fade-up">
         <div class="timeline-middle-line"></div>
         <div class="container">
 
             <div class="timeline-item row" id="experience-sky">
-                <div class="timeline-icon" style="--experience-icon: url('../images/bhavik_images/experience-section/icons/icons8-retro-tv-48.png')"></div>
+                <div class="timeline-icon"
+                     style="--experience-icon: url('../images/bhavik_images/experience-section/icons/icons8-retro-tv-48.png')"></div>
 
-                <div class="timeline-content" data-aos="fade-right" style="--experience-background-image: url('../images/bhavik_images/experience-section/backgrounds/sky.jpg')">
+                <div class="timeline-content" data-aos="fade-right"
+                     style="--experience-background-image: url('../images/bhavik_images/experience-section/backgrounds/sky.jpg')">
                     <div class="inner">
                     <h2>Sky</h2>
                     <h3>Web Application Developer</h3>
@@ -482,7 +489,7 @@
     </section>
 
 
-</section> <!-- end s-clients -->
+</section> <!-- end s-companies -->
 
 
 <!-- contact
