work in progress message set

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
     ================================================== -->
 <section id="companies" class="s-companies">
 
-    <div class="row section-header" data-aos="fade-up">
+    <div class="row section-header has-bottom-sep" data-aos="fade-up">
         <div class="col-full">
             <h3 class="subhead">Experience</h3>
             <h1 class="display-2">Where have I worked?</h1>
@@ -490,6 +490,56 @@
 
 
 </section> <!-- end s-companies -->
+
+
+<!-- skills
+    ================================================== -->
+<section id="skills" class="s-skills">
+    <div class="row section-header has-bottom-sep" data-aos="fade-up">
+        <div class="col-full">
+            <h3 class="subhead subhead--dark">Volunteering</h3>
+            <h1 class="display-1 display-1--light">What do I believe in?</h1>
+        </div>
+    </div> <!-- end section-header -->
+    <div class="row skills-desc" data-aos="fade-up">
+        <div class="col-full">
+            <p>
+                Some paragraph will go here talking about me generally and my skills
+            </p>
+            <ul class="skill-bars">
+                <li>
+                    <div class="progress percent90"><span>90%</span></div>
+                    <strong>HTML5</strong>
+                </li>
+                <li>
+                    <div class="progress percent85"><span>85%</span></div>
+                    <strong>CSS3</strong>
+                </li>
+                <li>
+                    <div class="progress percent70"><span>70%</span></div>
+                    <strong>JQuery</strong>
+                </li>
+                <li>
+                    <div class="progress percent95"><span>95%</span></div>
+                    <strong>PHP</strong>
+                </li>
+                <li>
+                    <div class="progress percent75"><span>75%</span></div>
+                    <strong>Wordpress</strong>
+                </li>
+                <li>
+                    <div class="progress percent90"><span>90%</span></div>
+                    <strong>Angular JS</strong>
+                </li>
+            </ul>
+        </div>
+
+
+    </div> <!-- end skills-desc -->
+
+    <div class="skills-bottom__line"></div>
+
+</section> <!-- end s-skills -->
 
 
 <!-- contact
@@ -703,6 +753,7 @@
 ================================================== -->
 <div id="preloader">
     <div id="loader">
+        <div class="w-i-p">This site is still a work in progress</div>
         <div class="la-pacman la-2x">
             <div></div>
             <div></div>
