cop update work experience

--- a/index.html
+++ b/index.html
@@ -423,9 +423,16 @@
                         <h3>Cyber Threat Investigator</h3>
                         <div class="date">Jun 2019 - <br class="br-for-small-screen">Aug 2019</div>
                         <ul>
-                            <li>Analysed data with the use of custom dashboards designed on Splunk by me for internal investigations to find patterns and communicate them in a coherent manner for seniors to understand</li>
-                            <li>Made risk-based assessments for possible data losses and acted accordingly to manage incidents</li>
-                            <li>Interviewed subjects to assess if they, in turn, the Bank’s network could be compromised due to their actions</li>
+                            <li>Designed custom dashboards on Splunk and used them to analyse data for internal
+                                investigations to find patterns and communicate them in a coherent manner for seniors to
+                                understand
+                            </li>
+                            <li>Made risk-based assessments for possible data losses and acted accordingly to manage
+                                incidents
+                            </li>
+                            <li>Interviewed subjects to assess if they, in turn, the Bank’s network could be compromised
+                                due to their actions
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -440,10 +447,19 @@
                         <h3>Secure Project Consultant</h3>
                         <div class="date">Jun 2020 - <br class="br-for-small-screen">Aug 2020</div>
                         <ul>
-                            <li>Worked in small teams using the Agile Methodology and Design Thinking, taking many roles, rotating through projects, including Scrum Master, Business Analyst, UX Designer and Developer.</li>
-                            <li>Implemented a website using HTML and JavaScript involving NLP (through Watson) to streamline a process.</li>
-                            <li>Wrote complex SQL queries and applied them to create data visualisations to support the marketing strategy.</li>
-                            <li>Efficiently adapted communication methods to suit different stakeholders and maximised output to create user-centric products.</li>
+                            <li>Worked in small teams using the Agile Methodology and Design Thinking, taking many roles
+                                in a variety of projects, including Scrum Master, Business Analyst, UX Designer and
+                                Developer.
+                            </li>
+                            <li>Implemented a website using HTML and JavaScript involving NLP (through Watson) to
+                                streamline a process.
+                            </li>
+                            <li>Wrote complex SQL queries and applied them to create data visualisations to support the
+                                marketing strategy.
+                            </li>
+                            <li>Efficiently adapted communication methods to suit different stakeholders and maximised
+                                output to create user-centric products.
+                            </li>
                         </ul>
                     </div>
                 </div>
